atualizacao-banco-maut

--- a/estrutura-de-dados-1/.vscode/settings.json
+++ b/estrutura-de-dados-1/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Q3bublesort.C": "cpp",
         "Q3(bublesort)4.C": "cpp",
         "Q3(bublesort).C": "cpp",
-        "Q4.C": "cpp"
+        "Q4.C": "cpp",
+        "arquivo.C": "cpp"
     }
 }
